Archive2/b2/10d7da3b4e6855/output
main.cpp:3:13: error: initializer-string for char array is too long
char s[3] = "Robert";
            ^~~~~~~~
1 error generated.
